# RayTracer

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  vec3.hpp
Images/: antialiasing.ppm  cordiffuse.ppm  dielectric.ppm  diffuse.ppm  lambertian.ppm  metal.ppm  metalwithfuzz.ppm  normalvecs.ppm  spherewithground.ppm
doxydoc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  arguments_8cpp.html  arguments_8cpp__incl.dot  arguments_8h.html  arguments_8h__dep__incl.dot  arguments_8h__incl.dot  arguments_8h_source.html  bufstr_8h.html  bufstr_8h__dep__incl.dot  bufstr_8h__incl.dot  bufstr_8h_source.html  cache_8h.html  cache_8h__dep__incl.dot  cache_8h__incl.dot  cache_8h_source.html  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  caseconvert_8h.html  caseconvert_8h__dep__incl.dot  caseconvert_8h__incl.dot  caseconvert_8h_source.html  caseconvert_8py.html  cite_8cpp.html  cite_8cpp__incl.dot  cite_8h.html  cite_8h__dep__incl.dot  cite_8h__incl.dot  cite_8h_source.html  clangparser_8cpp.html  clangparser_8cpp__incl.dot  clangparser_8h.html  clangparser_8h__dep__incl.dot  clangparser_8h__incl.dot  (+7901 more)
doxydoc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  annotated.tex  arguments_8cpp.tex  arguments_8cpp__incl.dot  arguments_8h.tex  arguments_8h__dep__incl.dot  arguments_8h__incl.dot  arguments_8h_source.tex  bufstr_8h.tex  bufstr_8h__dep__incl.dot  bufstr_8h__incl.dot  bufstr_8h_source.tex  cache_8h.tex  cache_8h__dep__incl.dot  cache_8h__incl.dot  cache_8h_source.tex  camera_8hpp.tex  camera_8hpp__dep__incl.md5  camera_8hpp__incl.md5  camera_8hpp_source.tex  caseconvert_8h.tex  cite_8h.tex  (+6220 more)
firstimage/: image.cpp  image.ppm  vec3.hpp
include/: vec3.hpp
main/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt
utilities/include/: camera.hpp  color.hpp  hittable.hpp  hittablelists.hpp  material.hpp  maths.hpp  ray.hpp  vec3.hpp
utilities/src/: color.cpp  hittable.cpp  hittablelists.cpp  material.cpp  ray.cpp  vec3.cpp
(+202 files in other folders)
